# nebula

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  genindex.html  index.html  installation.html  modules.html  nebula.addons.attacks.html  nebula.addons.attacks.poisoning.html  nebula.addons.blockchain.chaincode.html  nebula.addons.blockchain.geth.html  nebula.addons.blockchain.html  nebula.addons.blockchain.oracle.html  nebula.addons.html  nebula.addons.trustworthiness.html  nebula.addons.waf.html  nebula.config.html  nebula.core.aggregation.html  nebula.core.datasets.cifar10.html  nebula.core.datasets.cifar100.html  nebula.core.datasets.emnist.html  nebula.core.datasets.fashionmnist.html  nebula.core.datasets.html  nebula.core.datasets.kitsun.html  nebula.core.datasets.militarysar.html  nebula.core.datasets.mnist.html  nebula.core.datasets.mnistML.html  nebula.core.datasets.sentiment140.html  nebula.core.datasets.syscall.html  nebula.core.datasets.wadi.html  nebula.core.html  nebula.core.models.cifar10.html  nebula.core.models.cifar100.html  (+25 more)
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/actions/setup-env/: action.yml
.github/workflows/: codeql.yml  documentation.yml  main.yml  on-release.yml  url-health.yml
_sources/: installation.rst  nebula.addons.blockchain.geth.rst  nebula.addons.blockchain.rst  nebula.addons.rst  nebula.addons.waf.rst  nebula.config.rst  nebula.core.datasets.fashionmnist.rst  nebula.core.datasets.kitsun.rst  nebula.core.datasets.mnistML.rst  nebula.core.models.cifar100.rst  nebula.core.models.wadi.rst  nebula.core.pb.rst  nebula.tests.rst
_sources/api/: index.rst
_sources/api/nebula/: index.rst
analysis/: README.md
api/: index.html
api/SUMMARY/: index.html
api/addons/: index.html
api/addons/attacks/: index.html
api/addons/blockchain/: index.html
api/addons/env/: index.html
api/addons/functions/: index.html
api/addons/mobility/: index.html
api/addons/reporter/: index.html
api/addons/topologymanager/: index.html
api/addons/trustworthiness/: index.html
api/addons/waf/: index.html
api/config/: index.html
api/config/config/: index.html
api/config/mender/: index.html
api/controller/: index.html
api/core/: index.html
api/core/aggregation/: index.html
api/core/datasets/: index.html
api/core/engine/: index.html
api/core/eventmanager/: index.html
api/core/models/: index.html
api/core/network/: index.html
api/core/pb/: index.html
api/core/role/: index.html
api/core/training/: index.html
api/core/utils/: index.html
api/frontend/: index.html
api/frontend/app/: index.html
api/frontend/config/: index.html
api/frontend/database/: index.html
api/frontend/databases/: index.html
api/frontend/utils/: index.html
api/nebula/: index.html
api/nebula/addons/: index.html
api/nebula/config/: index.html
api/nebula/controller/: index.html
api/nebula/core/: index.html
api/nebula/frontend/: index.html
api/nebula/node/: index.html
api/nebula/scenarios/: index.html
api/nebula/tests/: index.html
api/node/: index.html
api/scenarios/: index.html
api/tests/: index.html
api/tests/main/: index.html
app/: main.py
changelog/: index.html
contributing/: index.html
docs/: Makefile  conf.py  index.rst  installation.rst  mkdocs.yml  modules.rst  nebula.addons.attacks.poisoning.rst  nebula.addons.attacks.rst  nebula.addons.blockchain.chaincode.rst  nebula.addons.blockchain.experiments.rst  nebula.addons.blockchain.oracle.rst  nebula.addons.blockchain.rst  nebula.addons.trustworthiness.rst  nebula.core.aggregation.rst  nebula.core.datasets.cifar10.rst  nebula.core.datasets.cifar100.rst  nebula.core.datasets.emnist.rst  nebula.core.datasets.militarysar.rst  nebula.core.datasets.mnist.rst  nebula.core.datasets.rst  nebula.core.datasets.sentiment140.rst  nebula.core.datasets.syscall.rst  nebula.core.datasets.wadi.rst  nebula.core.models.cifar10.rst  nebula.core.models.emnist.rst  nebula.core.models.fashionmnist.rst  nebula.core.models.kitsun.rst  nebula.core.models.militarysar.rst  nebula.core.models.mnist.rst  nebula.core.models.rst  nebula.core.models.sentiment140.rst  nebula.core.models.syscall.rst  nebula.core.network.rst  nebula.core.rst  nebula.core.training.rst  nebula.core.utils.rst  nebula.frontend.config.rst  nebula.frontend.databases.rst  nebula.frontend.rst  nebula.rst  (+1 more)
docs/_prebuilt/: index.md  installation.md
docs/_static/: custom.css
docs/_templates/autoapi/: index.rst
docs/scripts/: gen_ref_pages.py
installation/: index.html
nebula/: __init__.py  controller.py  node.py  requirements.txt  scenarios.py  utils.py
nebula/addons/: __init__.py  env.py  functions.py  mobility.py  reporter.py  topologymanager.py
nebula/addons/attacks/: attacks.py
nebula/addons/blockchain/: blockchain_deployer.py
nebula/addons/sustainability/: CPU_benchmark_v4.csv  sustain_util.py
nebula/addons/trustworthiness/: calculation.py  factsheet.py  graphics.py  metric.py  pillar.py  utils.py
nebula/addons/waf/: Dockerfile-grafana  Dockerfile-loki  Dockerfile-promtail  Dockerfile-waf  crs-setup.conf  default.conf  loki-config.yml  nginx.conf  promtail-config.yml
nebula/config/: config.py  mender.py
nebula/core/: engine.py  eventmanager.py  role.py
nebula/core/aggregation/: aggregator.py  blockchainReputation.py  bulyan.py  dualhistagg.py  dynamicAggregator.py  fedavg.py  fedavgSVM.py  krum.py  median.py  reactiveAggregator.py  trimmedmean.py
nebula/core/datasets/: changeablesubset.py  datamodule.py  nebuladataset.py
nebula/core/knoledgeDistillation/: RKD.py  SemCKD.py
nebula/core/models/: nebulamodel.py
nebula/core/neighbormanagement/: README.txt  nodemanager.py  timergenerator.py
nebula/core/network/: communications.py  (+8 more)
nebula/frontend/: Dockerfile  app.py  database.py  requirements.txt  start_services.sh  utils.py
nebula/tests/: aggregation.json  attacks.json  custom.json  datasets.json  main.py  test.py  topology.json
search/: search_index.json
usage/: index.html
(+693 files in other folders)
