[tool.poetry]
name = "nebula-dfl"
version = "0.0.1"
description = "NEBULA: A Platform for Decentralized Federated Learning"
authors = ["Enrique Tomás Martínez Beltrán <enriquetomas@um.es>"]
repository = "https://github.com/CyberDataLab/nebula"
documentation = "https://nebula.enriquetomasmb.com/"
readme = "README.md"
license = "GPL-3.0"
packages = [
  {include = "nebula"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = "1.0.1"
requests = "2.32.3"
docker = "7.1.0"
web3 = "6.20.0"
matplotlib = "3.9.2"
networkx = "3.3"
psutil = "6.0.0"
pycryptodome = "3.20.0"
cryptography = "43.0.1"
nvidia-ml-py = "12.560.30"
watchdog = "5.0.2"

[tool.poetry.group.dev.dependencies]
deptry = "^0.20.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
ruff = "^0.7.2"
isort = "^5.13.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.43"
mkdocs-material-extensions = "^1.3.1"
mkdocs-autorefs = "^1.2.0"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"


[tool.poetry.group.core.dependencies]
protobuf = "4.25.3"
qtconsole = "5.6.0"
aiohttp = "3.10.5"
async-timeout = "4.0.3"
tcconfig = "0.29.1"
geopy = "2.4.1"
numpy = "2.1.1"
torch = "2.4.1"
torchvision = "0.19.1"
torchtext = "^0.18.0"
torchdata = "0.8.0"
torchmetrics = "1.4.1"
lightning = "2.4.0"
transformers = "4.44.2"
plotly = "5.24.0"
tensorboard = "2.17.1"
tensorboardx = "2.6.2.2"
pytest = "8.3.3"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
setuptools = "74.1.2"
matplotlib = "3.9.2"
networkx = "3.3"
requests = "2.32.3"
pillow = "10.4.0"
ansi2html = "1.9.2"
pycryptodome = "3.20.0"
cryptography = "43.0.1"
psutil = "6.0.0"
rich = "13.8.1"
seaborn = "0.13.2"
scikit-learn = "1.5.1"
scikit-image = "0.24.0"
datasets = "2.21.0"
timm = "1.0.9"
nvidia-ml-py = "12.560.30"
web3 = "6.20.0"
tabulate = "0.9.0"
retry = "0.9.2"
docker = "7.1.0"
openpyxl = "3.1.5"
lz4 = "4.3.3"

[tool.poetry.group.frontend.dependencies]
setuptools = "74.1.2"
wheel = "0.44.0"
protobuf = "4.25.3"
tensorboard = "2.17.1"
tensorboardx = "2.6.2.2"
pandas = "2.2.2"
fastapi = {version = "0.114.0", extras = ["all"]}
uvicorn = "0.30.6"
jinja2 = "3.1.4"
pytest = "8.3.3"
matplotlib = "3.9.2"
plotly = "5.24.0"
python-dotenv = "1.0.1"
networkx = "3.3"
requests = "2.32.3"
ansi2html = "1.9.2"
gunicorn = "23.0.0"
geopy = "2.4.1"
cryptography = "43.0.1"
pyopenssl = "24.2.1"
pycryptodome = "3.20.0"
pyinstrument = "4.7.3"
cffi = "1.17.1"
web3 = "6.20.0"
aiosqlite = "0.20.0"
docker = "7.1.0"
argon2-cffi = "23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["nebula"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true
