[project]
name = "nebula-dfl"
version = "0.0.1"
description = "NEBULA: A Platform for Decentralized Federated Learning"
authors = [{name = "Enrique Tomás Martínez Beltrán", email = "enriquetomas@um.es"}]
maintainers = [{name = "Enrique Tomás Martínez Beltrán", email = "enriquetomas@um.es"}]
readme = "README.md"
keywords = [
    "nebula", "federated learning", "decentralized", "privacy", "security", "blockchain", "docker", "gpu", "nvidia",
    "cuda", "pytorch", "communication", "networking", "distributed", "machine learning", "deep learning", "ai",
    "artificial intelligence", "data science", "data privacy", "data security", "data protection", "data sharing"
]
license = {file = "LICENSE"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "cryptography==43.0.1",
    "docker==7.1.0",
    "matplotlib==3.9.2",
    "networkx==3.3",
    "nvidia-ml-py==12.560.30",
    "psutil==6.0.0",
    "pycryptodome==3.20.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "watchdog==5.0.2",
    "deptry<1.0.0,>=0.20.0",
    "isort<6.0.0,>=5.13.2",
    "mypy<2.0.0,>=1.13.0",
    "pre-commit<5.0.0,>=4.0.1",
    "ruff<1.0.0,>=0.7.2",
    "tensorboard-reducer==0.3.1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/CyberDataLab/nebula"
Documentation = "https://nebula.enriquetomasmb.com/"
Repository = "https://github.com/CyberDataLab/nebula"

[dependency-groups]
docs = [
    "mkdocs<2.0.0,>=1.6.1",
    "mkdocs-autorefs<2.0.0,>=1.2.0",
    "mkdocs-gen-files<1.0.0,>=0.5.0",
    "mkdocs-git-revision-date-localized-plugin<2.0.0,>=1.3.0",
    "mkdocs-literate-nav<1.0.0,>=0.6.1",
    "mkdocs-material<10.0.0,>=9.5.43",
    "mkdocs-material-extensions<2.0.0,>=1.3.1",
    "mkdocs-section-index<1.0.0,>=0.3.9",
    "mkdocstrings[python]<1.0.0,>=0.26.2",
]
controller = [
    "ansi2html==1.9.2",
    "docker==7.1.0",
    "fastapi[all]==0.114.0",
    "geopy==2.4.1",
    "gunicorn==23.0.0",
    "jinja2==3.1.4",
    "matplotlib==3.9.2",
    "networkx==3.3",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "plotly==5.24.0",
    "protobuf==4.25.3",
    "psutil==6.0.0",
    "pyopenssl==24.2.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "setuptools==74.1.2",
    "uvicorn==0.30.6",
    "wheel==0.44.0",
]
core = [
    "aiohttp==3.10.5",
    "ansi2html==1.9.2",
    "async-timeout==4.0.3",
    "cryptography==43.0.1",
    "datasets==2.21.0",
    "docker==7.1.0",
    "geopy==2.4.1",
    "lightning==2.4.0",
    "lz4==4.3.3",
    "matplotlib==3.9.2",
    "networkx==3.3",
    "numpy==2.1.1",
    "plotly==5.24.0",
    "protobuf==4.25.3",
    "psutil==6.0.0",
    "pycryptodome==3.20.0",
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "retry==0.9.2",
    "rich==13.8.1",
    "scikit-image==0.24.0",
    "scikit-learn==1.5.1",
    "seaborn==0.13.2",
    "setuptools==74.1.2",
    "tabulate==0.9.0",
    "tcconfig==0.29.1",
    "tensorboard==2.17.1",
    "tensorboardx==2.6.2.2",
    "timm==1.0.9",
    "torch==2.4.1",
    "torchmetrics==1.4.1",
    "torchvision==0.19.1",
    "transformers==4.44.2",
    "web3==6.20.0",
]
frontend = [
    "aiosqlite==0.20.0",
    "ansi2html==1.9.2",
    "argon2-cffi==23.1.0",
    "cffi==1.17.1",
    "cryptography==43.0.1",
    "docker==7.1.0",
    "fastapi[all]==0.114.0",
    "geopy==2.4.1",
    "gunicorn==23.0.0",
    "jinja2==3.1.4",
    "lz4==4.3.3",
    "matplotlib==3.9.2",
    "networkx==3.3",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "plotly==5.24.0",
    "protobuf==4.25.3",
    "psutil==6.0.0",
    "pycryptodome==3.20.0",
    "pyinstrument==4.7.3",
    "pyopenssl==24.2.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "setuptools==74.1.2",
    "tensorboard==2.17.1",
    "tensorboardx==2.6.2.2",
    "torch==2.4.1",
    "uvicorn==0.30.6",
    "web3==6.20.0",
    "wheel==0.44.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["nebula"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
lint.select = [
    "YTT",  # flake8-2020
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "SIM",  # flake8-simplify
    "I",    # isort
    "C90",  # mccabe
    "E", "W",  # pycodestyle
    "F",    # pyflakes
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "RUF",  # ruff
    "TRY",  # tryceratops
]
lint.ignore = [
    "E501",  # LineTooLong
    "E731",  # DoNotAssignLambda
]

[tool.ruff.format]
preview = true

[tool.setuptools.packages.find]
include = ["nebula", "app"]
where = []
